# locutoria

./: LICENSE  client.hs  compose.cabal  locutoria.cabal  socialmail-client.cabal  stack.yaml
Network/Mail/: Locutoria.hs
Network/Mail/Locutoria/: Channel.hs  Cli.hs  Client.hs  Compose.hs  Config.hs  Conversation.hs  Event.hs  Identifiable.hs  Index.hs  Internal.hs  Keymap.hs  MailingList.hs  Message.hs  Notmuch.hs  State.hs  Ui.hs  View.hs
Network/Mail/Locutoria/Cli/: Keymap.hs  Ui.hs  Widgets.hs
Network/Mail/SocialMail/: Cli.hs  Client.hs  Compose.hs  Identifiable.hs  Index.hs  Internal.hs  Notmuch.hs
