name:                socialmail-compose
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jesse Hallett <jesse@galois.com>
maintainer:          Jesse Hallett <jesse@galois.com>
-- copyright:
category:            Email
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Mail.SocialMail.Compose
  --other-modules:       Network.Mail.SocialMail.Internal
  build-depends:       base >=4.7 && <4.8,
                       activitystreams-aeson,
                       aeson,
                       datetime,
                       mime-mail,
                       network-uri,
                       text
  default-language:    Haskell2010
