name:                socialmail-compose
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jesse Hallett <jesse@galois.com>
maintainer:          Jesse Hallett <jesse@galois.com>
-- copyright:
category:            Email
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Mail.SocialMail.Compose,
                       Network.Mail.SocialMail.Notmuch
  --other-modules:       Network.Mail.SocialMail.Internal
  build-depends:       base >=4.7 && <4.8,
                       activitystreams-aeson,
                       aeson,
                       attoparsec,
                       case-insensitive,
                       datetime,
                       mime,
                       mime-mail,
                       network-uri,
                       process,
                       text
  default-language:    Haskell2010

executable client
  main-is:             client.hs
  build-depends:       base >=4.7 && <4.8,
                       activitystreams-aeson,
                       aeson,
                       case-insensitive,
                       datetime,
                       mime,
                       mime-mail,
                       network-uri,
                       process,
                       text,
                       text-icu,
                       vty-ui
  default-language:    Haskell2010
