name:                locutoria
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jesse Hallett <jesse@galois.com>
maintainer:          Jesse Hallett <jesse@galois.com>
-- copyright:
category:            Email
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:   Network.Mail.Locutoria,
                     Network.Mail.Locutoria.Channel,
                     Network.Mail.Locutoria.Cli.Keymap,
                     Network.Mail.Locutoria.Cli.Ui,
                     Network.Mail.Locutoria.Config,
                     Network.Mail.Locutoria.Conversation,
                     Network.Mail.Locutoria.Event,
                     Network.Mail.Locutoria.MailingList,
                     Network.Mail.Locutoria.Message,
                     Network.Mail.Locutoria.State,
                     Network.Mail.Locutoria.View
  other-modules:     Network.Mail.Locutoria.Cli.Widgets,
                     Network.Mail.Locutoria.Compose,
                     Network.Mail.Locutoria.Identifiable,
                     Network.Mail.Locutoria.Index,
                     Network.Mail.Locutoria.Notmuch
  build-depends:     base >=4.7 && <5,
                     attoparsec,
                     activitystreams-aeson,
                     aeson,
                     brick,
                     bytestring,
                     case-insensitive,
                     containers,
                     data-default,
                     datetime,
                     directory,
                     email-header,
                     errors,
                     lens,
                     linebreak,
                     mime-mail,
                     mtl,
                     network-uri,
                     process,
                     temporary,
                     text,
                     text-icu,
                     unix,
                     unordered-containers,
                     vector,
                     vty >=5.0.0
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall

executable client
  main-is:           client.hs
  build-depends:     base >=4.7 && <5,
                     locutoria,
                     attoparsec,
                     activitystreams-aeson,
                     aeson,
                     brick,
                     bytestring,
                     case-insensitive,
                     containers,
                     data-default,
                     datetime,
                     directory,
                     email-header,
                     errors,
                     lens,
                     linebreak,
                     mime-mail,
                     mtl,
                     network-uri,
                     process,
                     temporary,
                     text,
                     text-icu,
                     unix,
                     unordered-containers,
                     vector,
                     vty >=5.0.0
  default-language:  Haskell2010
  ghc-options:       -threaded -Wall
