name:                socialmail-client
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Jesse Hallett <jesse@galois.com>
maintainer:          Jesse Hallett <jesse@galois.com>
-- copyright:
category:            Email
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules:     Network.Mail.SocialMail.Compose,
                       Network.Mail.SocialMail.Identifiable,
                       Network.Mail.SocialMail.Notmuch
  --other-modules:       Network.Mail.SocialMail.Internal
  build-depends:       base >=4.7 && <4.8,
                       activitystreams-aeson,
                       aeson,
                       attoparsec,
                       bytestring,
                       case-insensitive,
                       containers,
                       datetime,
                       lens,
                       mime,
                       mime-mail,
                       network-uri,
                       process,
                       text,
                       unordered-containers,
                       vector
  default-language:    Haskell2010

executable client
  main-is:             client.hs
  build-depends:       base >=4.7 && <4.8,
                       activitystreams-aeson,
                       aeson,
                       bytestring,
                       case-insensitive,
                       containers,
                       datetime,
                       lens,
                       mime,
                       mime-mail,
                       network-uri,
                       process,
                       reactive-banana,
                       text,
                       text-icu,
                       unordered-containers,
                       vector,
                       vty,
                       vty-ui
  default-language:    Haskell2010
